--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/Iliana00/CDMX011-md-links/issues"
   },
-  "homepage": "https://github.com/Iliana00/CDMX011-md-links#readme"
+  "homepage": "https://github.com/Iliana00/CDMX011-md-links#readme",
+  "dependencies": {
+    "markdown-it": "^12.2.0",
+    "markdown-link-extractor": "^1.3.0"
+  }
 }
