--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mdlinks",
+  "name": "cdmx011-md-links",
   "version": "1.0.0",
-  "description": "Esta es mi libreria",
+  "description": "a library named mdlinks",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -13,14 +13,13 @@
     "type": "git",
     "url": "git+https://github.com/Iliana00/CDMX011-md-links.git"
   },
-  "author": "Iliana",
+  "author": "Iliana00",
   "license": "ISC",
+  "bin": {
+    "mdlink": "index.js"
+  },
   "bugs": {
     "url": "https://github.com/Iliana00/CDMX011-md-links/issues"
   },
-  "homepage": "https://github.com/Iliana00/CDMX011-md-links#readme",
-  "dependencies": {
-    "markdown-it": "^12.2.0",
-    "markdown-link-extractor": "^1.3.0"
-  }
+  "homepage": "https://github.com/Iliana00/CDMX011-md-links#readme"
 }
