--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "scripts": {
+    "eslint": "eslint --ext .js test/",
+    "pretest": "npm run eslint",
     "test": "jest /test --coverage"
   },
   "repository": {
@@ -30,6 +32,7 @@
     "yargs": "^17.2.1"
   },
   "devDependencies": {
+    "eslint": "^8.2.0",
     "jest": "^27.3.1"
   }
 }
